--- a/cover-letter-37signals/index.html
+++ b/cover-letter-37signals/index.html
@@ -104,8 +104,8 @@
     <p> One of my most notable achievements was founding Megafono, the first podcast hosting platform in Brazil. This
       venture required me to handle everything from backend development to customer support, applying principles from
       37signals' "Getting Real" and “Rework” to ensure a lean and efficient operation. The Megafono has some open source
-      project you can take a look <a href="https://<a href="
-        https://github.com/megafono/">github.com/megafono</a>.">github.com/megafono/">github.com/megafono</a>.</a></p>
+      project you can take a look <a href="https://github.com/megafono/">github.com/megafono</a>.</a>
+    </p>
     <p> At Youse Seguros, I led many developers across six teams, working on multi-million dollar projects. My role
       involves designing scalable architecture strategies and mentoring developers. This experience has strengthened my
       ability to lead by example, promote best practices, and ensure the delivery of robust software solutions. </p>
